fix: Updated border color in dark mode for search input

--- a/src/style/search.scss
+++ b/src/style/search.scss
@@ -1,6 +1,6 @@
 @layer components {
     .search__input {
-        @apply w-full mt-4 p-2 text-black dark:text-white bg-white dark:bg-dark-mode-black border border-gray-300 rounded transition;
+        @apply w-full mt-4 p-2 text-black dark:text-white bg-white dark:bg-dark-mode-black border border-gray-300 dark:border-dark-mode-gray-2 rounded transition;
     }
 
     .search__btn--category {
